# VSDXToHTML

./: .gitignore  README.md  convert.py  pyproject.toml  requirements.txt  themes.py
parser/: __init__.py  vsdx_parser.py
renderer/: __init__.py  svg.py
tests/: create_test_vsdx.py  test_converter.py
